fixed text alignment mistake

--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -73,7 +73,7 @@
         display: block;
         padding-right: 1em;
     }
-    address {
+    .contact-info {
         text-align: left;
     }
     /*Footer**********************/
